# bevy-2d-rpg-game

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PORT_PLAN.md  README.md  ROADMAP.md  Trunk.toml  index.html  justfile  wrangler.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-web.yml
assets/characters/: goblin.character.ron  hero.character.ron
assets/sprites/lyuba/: ATTRIBUTION.md
docs/: build-optimization-benchmarks.md
functions/: _middleware.js
infra/cloudflare-access/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
src/: combat.rs  components.rs  game.rs  game_over.rs  lib.rs  main.rs  main_menu.rs  map.rs  meta.rs  prelude.rs  progress.rs  state.rs  util.rs
src/battle/: enemy_turn.rs  menu.rs  messages.rs  mod.rs  naming.rs  rng.rs  seed.rs  spawn.rs  state.rs  targeting.rs
src/battle/ui/: battle_log.rs  hud.rs  mod.rs
src/characters/: asset_loader.rs  components.rs  definition.rs  mod.rs
src/combat/: damage.rs  events.rs  mod.rs  resolve.rs
src/debug/: inspector.rs  mod.rs
tests/: action_menu.rs  battle_combat.rs  battle_flow.rs  battle_outcome.rs  battle_spawn.rs  battle_ui.rs  character_stats.rs  combat_damage.rs  enemy_turn.rs  game_over.rs  main_menu.rs  map_exploration.rs  name_suffixing.rs  seed_parsing.rs  smoke.rs  targeting.rs
