[package]
name = "bevy-2d-rpg-game"
version = "0.1.0"
edition = "2024"
description = "Turn-based RPG battle vertical slice — Bevy port of the Godot 4.6 C# original"
license = "MIT"

[lib]
name = "bevy_2d_rpg_game"
path = "src/lib.rs"

[dependencies]
bevy = "0.18.1"
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
thiserror = "2"
bevy-inspector-egui = { version = "0.36", optional = true }

# WebAssembly-only dependencies. On `wasm32-unknown-unknown`:
# * Bevy needs the `webgl2` renderer backend for broad browser support (WebGPU
#   is not yet enabled everywhere).
# * `getrandom` (pulled in transitively by `rand`) refuses to build for wasm
#   unless a backend is selected. The `wasm_js` feature wires it to the
#   browser's `crypto.getRandomValues`; it must be paired with the
#   `getrandom_backend="wasm_js"` cfg set in `.cargo/config.toml`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18.1", features = ["webgl2"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
# `bevy/track_location` records the source location of the last change to each
# component, which the inspector surfaces as a right-click "jump to code" on a
# component. Scoped to this debug-only feature so release/test builds don't pay
# the tracking cost.
debug-inspector = ["dep:bevy-inspector-egui", "bevy/track_location"]
# Dynamic linking gives the fastest iterative dev builds (Bevy's most impactful
# compile-time optimization). Opt in with `cargo run --features dynamic_linking`
# (or `just run-fast`). Never ship release builds with this enabled.
dynamic_linking = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# Line-tables-only debug info — cuts link time on macOS; keeps line numbers in
# backtraces but drops some variable detail in the debugger.
debug = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Size-optimized profile for the WebAssembly bundle, kept separate from the
# native `release` profile (which stays at opt-level 3 for runtime speed). The
# Trunk build / Pages deploy select it with `--cargo-profile wasm-release`.
# These flags shrink the `.wasm` the browser has to download:
[profile.wasm-release]
inherits = "release"
# Optimize for size rather than raw speed — fine for a turn-based RPG.
opt-level = "s"
# Whole-program link-time optimization strips cross-crate dead code.
lto = "fat"
# A single codegen unit lets the optimizer see the whole crate (smaller output,
# slower compile — acceptable for a deploy build).
codegen-units = 1
# Drop panic-unwinding tables; wasm aborts on panic anyway.
panic = "abort"
# Strip symbols from the final binary.
strip = true

[lints.clippy]
# Opt into clippy::pedantic for maintainability/style enforcement. priority = -1
# lets the individual allow-backs below (default priority 0) override the group.
pedantic = { level = "warn", priority = -1 }

# Bevy ECS makes these unavoidable; Bevy's own crates allow them too.
type_complexity = "allow"
too_many_arguments = "allow"

# Bevy-hostile pedantic lints — each fires on idiomatic Bevy/game code by design:
# Bevy systems take Res<T> / Query<T> / Commands by value as part of the API.
needless_pass_by_value = "allow"
# Intentional in HP-fraction math (`current as f32 / max as f32`).
cast_precision_loss = "allow"
# Deliberate, bounded usize/u32 index casts.
cast_possible_truncation = "allow"
# `battle::BattleSet`, `combat::CombatStats` etc. read idiomatically.
module_name_repetitions = "allow"
