[package]
name = "bevy-2d-rpg-game"
version = "0.1.0"
edition = "2024"
description = "Turn-based RPG battle vertical slice — Bevy port of the Godot 4.6 C# original"
license = "MIT"

[lib]
name = "bevy_2d_rpg_game"
path = "src/lib.rs"

# Bevy with default features OFF, composed from the granular building blocks a
# 2D game actually uses. This skips the `default`/`2d`/`ui` bundle features,
# which hard-pull the entire 3D/PBR/glTF stack plus `bevy_audio`, `bevy_scene`,
# `bevy_gilrs`, and `sysinfo_plugin` — none of which this game uses. Dropping
# them shrinks the wasm bundle and cuts compile time.
#
# Render stack mirrors what the `2d` bundle expands to (sprite + UI render,
# core pipeline, post-process) minus the unused bits. `bevy_picking` is kept:
# the targeting indicator and the debug inspector both rely on sprite picking.
# `multi_threaded` / `x11` / `wayland` are native-only and overridden out for
# wasm below.
[dependencies.bevy]
version = "0.19"
default-features = false
features = [
    # App scaffolding (mirrors `default_app`).
    "bevy_asset",
    "bevy_input_focus",
    "bevy_log",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "reflect_auto_register",
    "async_executor",
    # 2D render pipeline.
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_post_process",
    # UI + text.
    "bevy_ui",
    "bevy_ui_render",
    "bevy_text",
    "default_font",
    # Color, image decoding (PNG sprites), and sprite picking.
    "bevy_color",
    "bevy_image",
    "png",
    # Core picking plus the sprite backend: the targeting indicator and the
    # debug inspector both pick sprites (SpritePickingMode/Settings).
    "bevy_picking",
    "sprite_picking",
    # Native platform features (overridden out on wasm).
    "multi_threaded",
    "x11",
    "wayland",
]

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
thiserror = "2"
# TODO(bevy 0.19): bevy-inspector-egui has no Bevy 0.19-compatible release yet
# (it targets 0.18 on both crates.io and git main as of this migration), so the
# `debug-inspector` feature is disabled below. Re-enable both once a compatible
# version ships.
# bevy-inspector-egui = { version = "0.36", optional = true }

# WebAssembly-only Bevy features. On `wasm32-unknown-unknown`:
# * The `webgl2` renderer backend gives broad browser support (WebGPU is not
#   yet enabled everywhere). `multi_threaded`/`x11`/`wayland` are meaningless on
#   wasm, so the web build only adds `webgl2` on top of the shared set above.
# * `getrandom` (pulled in transitively by `rand`) refuses to build for wasm
#   unless a backend is selected. The `wasm_js` feature wires it to the
#   browser's `crypto.getRandomValues`; it must be paired with the
#   `getrandom_backend="wasm_js"` cfg set in `.cargo/config.toml`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.19", default-features = false, features = ["webgl2"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
# `bevy/track_location` records the source location of the last change to each
# component, which the inspector surfaces as a right-click "jump to code" on a
# component. Scoped to this debug-only feature so release/test builds don't pay
# the tracking cost.
# TODO(bevy 0.19): re-enable once bevy-inspector-egui supports Bevy 0.19 (see the
# commented-out dependency above).
# debug-inspector = ["dep:bevy-inspector-egui", "bevy/track_location"]
# Dynamic linking gives the fastest iterative dev builds (Bevy's most impactful
# compile-time optimization). Opt in with `cargo run --features dynamic_linking`
# (or `just run-fast`). Never ship release builds with this enabled.
dynamic_linking = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# Line-tables-only debug info — cuts link time on macOS; keeps line numbers in
# backtraces but drops some variable detail in the debugger.
debug = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
# The `debug-inspector` feature is temporarily commented out (see the dependency
# section) because bevy-inspector-egui has no Bevy 0.19 release yet. The
# `#[cfg(feature = "debug-inspector")]` gates in the source stay in place so the
# feature can be restored in one step; declare the cfg here so they don't warn as
# "unexpected" while the feature is disabled.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("debug-inspector"))'] }

# Size-optimized profile for the WebAssembly bundle, kept separate from the
# native `release` profile (which stays at opt-level 3 for runtime speed). The
# Trunk build / Pages deploy select it with `--cargo-profile wasm-release`.
# These flags shrink the `.wasm` the browser has to download:
[profile.wasm-release]
inherits = "release"
# Optimize for size rather than raw speed — fine for a turn-based RPG.
opt-level = "s"
# Whole-program link-time optimization strips cross-crate dead code.
lto = "fat"
# A single codegen unit lets the optimizer see the whole crate (smaller output,
# slower compile — acceptable for a deploy build).
codegen-units = 1
# Drop panic-unwinding tables; wasm aborts on panic anyway.
panic = "abort"
# NOTE: deliberately *not* setting `strip = true`. Stripping removes the wasm
# `target_features` custom section, which `wasm-opt` reads to learn which wasm
# features (bulk-memory, non-trapping float-to-int, …) the binary uses. Without
# it `wasm-opt` falls back to the MVP feature set and rejects the bundle. The
# Trunk release pipeline (wasm-bindgen + `wasm-opt -Oz`) already strips debug
# and name sections, so cargo-level stripping adds little for wasm anyway.

[lints.clippy]
# Opt into clippy::pedantic for maintainability/style enforcement. priority = -1
# lets the individual allow-backs below (default priority 0) override the group.
pedantic = { level = "warn", priority = -1 }

# Bevy ECS makes these unavoidable; Bevy's own crates allow them too.
type_complexity = "allow"
too_many_arguments = "allow"

# Bevy-hostile pedantic lints — each fires on idiomatic Bevy/game code by design:
# Bevy systems take Res<T> / Query<T> / Commands by value as part of the API.
needless_pass_by_value = "allow"
# Intentional in HP-fraction math (`current as f32 / max as f32`).
cast_precision_loss = "allow"
# Deliberate, bounded usize/u32 index casts.
cast_possible_truncation = "allow"
# `battle::BattleSet`, `combat::CombatStats` etc. read idiomatically.
module_name_repetitions = "allow"
